--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -27,6 +27,10 @@ jobs:
       run: npm audit fix --force
       working-directory: ./apps/nft-bridge
 
+    - name: Install ESLint (if not already installed)
+      run: npm install eslint --save-dev
+      working-directory: ./apps/nft-bridge
+
     - name: Run Code Quality Check
       run: npm run lint
       working-directory: ./apps/nft-bridge
