--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -31,6 +31,10 @@ jobs:
       run: npm install eslint --save-dev
       working-directory: ./apps/nft-bridge
 
+    - name: Run Lint with Nx
+      run: npx nx lint nft-bridge
+      working-directory: .
+
     - name: Run Code Quality Check
       run: npm run lint
       working-directory: ./apps/nft-bridge
