--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -22,8 +22,15 @@ jobs:
     - name: Install Dependencies
       run: |
            npm install
-           npm install @nrwl/cli --save-dev
       working-directory: ./apps/nft-bridge
+
+    - name: Install Nx CLI (if needed)
+      run: npm install @nrwl/cli --save-dev
+      working-directory: .  # Run this at the root of the project
+
+    - name: Run Lint with Nx
+      run: npx nx lint nft-bridge
+      working-directory: .  
 
     - name: Fix Vulnerabilities
       run: npm audit fix --force
@@ -32,10 +39,6 @@ jobs:
     - name: Install ESLint (if not already installed)
       run: npm install eslint --save-dev
       working-directory: ./apps/nft-bridge
-
-    - name: Run Lint with Nx
-      run: npx nx lint nft-bridge
-      working-directory: .
 
     - name: Run Code Quality Check
       run: npm run lint
