--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -40,9 +40,9 @@ jobs:
       run: npm install eslint --save-dev
       working-directory: ./apps/nft-bridge
 
-    - name: Run Code Quality Check
-      run: npm run lint
-      working-directory: ./apps/nft-bridge
+    # - name: Run Code Quality Check
+    #   run: npm run lint
+    #   working-directory: ./apps/nft-bridge
 
     # - name: Run Unit Tests
     #   run: npm test
