--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -49,8 +49,8 @@ jobs:
     #   working-directory: ./apps/nft-bridge
 
     - name: Build Docker Image
-      run: |
-         docker build -f devops_assaingment/apps/nft-bridge/Dockerfile -t nft-bridge:latest devops_assaingment/
+      run: docker build -t nft-bridge:latest .
+      working-directory: ./apps/nft-bridge
 
     # - name: Push Docker Image
     #   run: |
