--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -49,7 +49,7 @@ jobs:
     #   working-directory: ./apps/nft-bridge
 
     - name: Build Docker Image
-      run: docker build -t nft-bridge:latest .
+      run: docker build -f devops_assaingment/apps/nft-bridge/Dockerfile -t nft-bridge:latest devops_assaingment/
       working-directory: ./apps/nft-bridge
 
     # - name: Push Docker Image
