--- a/apps/nft-bridge/Dockerfile
+++ b/apps/nft-bridge/Dockerfile
@@ -4,13 +4,16 @@ FROM node:16
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy the package.json and package-lock.json from the correct path
-COPY ./apps/nft-bridge/package*.json ./
+# Copy package.json and package-lock.json from the build context
+COPY apps/nft-bridge/package*.json ./
 
 # Install dependencies
 RUN npm install
 
-# Expose the port your application will run on (replace with actual port if different)
+# Copy the rest of the application code from the build context
+COPY apps/nft-bridge/ ./
+
+# Expose the port your application will run on (replace 3000 if different)
 EXPOSE 3000
 
 # Command to run your app
