--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -54,7 +54,7 @@ jobs:
         sudo service docker start
 
     - name: Build Docker Image
-      run: docker build -f devops_assaingment/apps/nft-bridge/Dockerfile -t nft-bridge:latest devops_assaingment/
+      run: docker build -f devops_assaingment/apps/nft-bridge/Dockerfile -t nft-bridge:latest .
       working-directory: ./apps/nft-bridge
 
     # - name: Push Docker Image
