--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -56,9 +56,8 @@ jobs:
     - name: List files
       run: ls -R
 
-    # - name: Build Docker Image
-    #   run: docker build -f devops_assaingment/apps/nft-bridge/Dockerfile -t nft-bridge:latest .
-    #   working-directory: ./apps/nft-bridge
+    - name: Build Docker Image
+      run: docker build -f apps/nft-bridge/Dockerfile -t nft-bridge:latest .
 
     # - name: Push Docker Image
     #   run: |
