--- a/apps/nft-bridge/package.json
+++ b/apps/nft-bridge/package.json
@@ -1,5 +1,29 @@
 {
+    "name": "nft-bridge",
+    "version": "1.0.0",
     "scripts": {
-      "lint": "eslint ."
+      "lint": "eslint .",
+      "test": "jest",
+      "start": "node dist/apps/nft-bridge/main.js"
+    },
+    "devDependencies": {
+      "eslint": "^9.16.0",
+      "eslint-plugin-node": "^11.1.0",
+      "@nrwl/cli": "^20.1.4",
+      "jest": "^29.4.3",
+      "eslint-config-airbnb-base": "^15.0.0",
+      "eslint-plugin-import": "^2.26.0",
+      "typescript": "^5.1.6",
+      "@types/jest": "^29.4.3"
+    },
+    "dependencies": {
+      "express": "^4.18.2",
+      "axios": "^1.3.0",
+      "jsonwebtoken": "^9.0.0",
+      "dotenv": "^10.0.0"
+    },
+    "engines": {
+      "node": ">=16.0.0"
     }
   }
+  
