--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -49,7 +49,7 @@ jobs:
 
     - name: Build Docker Image
       run: |
-           docker build -f apps/nft-bridge/Dockerfile -t nft-bridge:latest .
+           docker build -f apps/nft-bridge/Dockerfile -t nft-bridge-1:latest .
            docker image ls
 
      # Run Docker Container
