--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -55,14 +55,16 @@ jobs:
      # Run Docker Container
     - name: Run Docker Container
       run: |
-        # Start the container in detached mode
-        docker run -d -p 3000:3000 nft-bridge:latest
+           docker run -d --name nft-bridge-container -p 3000:3000 nft-bridge:latest
 
-        # Wait a few seconds for the container to be ready (optional, adjust if necessary)
-        sleep 10
+    - name: Wait for container to start
+      run: sleep 10  # Adjust as needed
 
-        # Test if the app is running by making an HTTP request to the container
-        curl --fail http://localhost:3000 || exit 1
+    - name: Test the Application
+      run: curl -f http://localhost:3000 || exit 1  # Replace with the actual endpoint if different
+
+    - name: Check Docker Container Logs
+      run: docker logs nft-bridge-container
 
     # - name: Push Docker Image
     #   run: |
