--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -58,3 +58,14 @@ jobs:
     #     echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
     #     docker tag nft-bridge:latest your-docker-registry/nft-bridge:latest
     #     docker push your-docker-registry/nft-bridge:latest
+    - name: Authenticate Docker to AWS ECR
+      run: |
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
+
+    - name: Tag Docker Image
+      run: |
+          docker tag nft-bridge:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/nft-bridge:latest
+
+    - name: Push Docker Image to AWS ECR
+      run: |
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/nft-bridge:latest
