--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -46,12 +46,12 @@ jobs:
     - name: Build Docker Image
       run: |
            docker build -f apps/nft-bridge/Dockerfile -t nft-bridge-1:latest .
-           docker image ls
+        #docker image ls
 
      # Run Docker Container
-    - name: Run Docker Container
-      run: |
-           docker run -d --name nft-bridge-container -p 3000:3000 nft-bridge-1:latest
+    # - name: Run Docker Container
+    #   run: |
+    #        docker run -d --name nft-bridge-container -p 3000:3000 nft-bridge-1:latest
 
     - name: Authenticate Docker to AWS ECR
       env:
