--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -45,7 +45,7 @@ jobs:
 
     - name: Build Docker Image
       run: |
-           docker build -f apps/nft-bridge/Dockerfile -t nft-bridge-1:latest .
+           docker build -f apps/nft-bridge/Dockerfile -t nft-bridge:latest .
         #docker image ls
 
      # Run Docker Container
@@ -63,11 +63,13 @@ jobs:
             aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
             aws configure set region $AWS_REGION
             aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com
+    
     - name: Push Docker Image
       run: |
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
         docker tag nft-bridge:latest your-docker-registry/nft-bridge:latest
         docker push your-docker-registry/nft-bridge:latest
+    
     - name: Authenticate Docker to AWS ECR
       run: |
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
