--- a/.github/workflows/cleanup.yaml
+++ b/.github/workflows/cleanup.yaml
@@ -1,4 +1,4 @@
-name: Cleanup EKS Resources
+name: Terraform Import Workflow
 
 on:
    push:
@@ -6,26 +6,33 @@ on:
       - kk_assignment
 
 jobs:
-  cleanup:
+  terraform-import:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Configure AWS CLI
-      run: |
-        aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
-        aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-        aws configure set region $AWS_REGION
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: ap-south-1 # Change this if your region is different
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-    - name: Delete IAM Role
-      run: |
-        echo "Deleting IAM Role eks-node-group-role"
-        aws iam delete-role --role-name eks-node-group-role || echo "Role does not exist"
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_version: 1.5.5 # Update to your required Terraform version
 
-    - name: Delete CloudWatch Log Group
-      run: |
-        echo "Deleting CloudWatch Log Group /aws/eks/default-eks-cluster/cluster"
-        aws logs delete-log-group --log-group-name /aws/eks/default-eks-cluster/cluster || echo "Log group does not exist"
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-south-1
+
+    - name: Initialize Terraform
+      run: terraform init
+
+    - name: Import IAM Role
+      run: terraform import aws_iam_role.node_role eks-node-group-role
+
+    - name: Import CloudWatch Log Group
+      run: terraform import aws_cloudwatch_log_group.this /aws/eks/default-eks-cluster/cluster
+
+    - name: Run Terraform Plan
+      run: terraform plan
