--- a/.github/workflows/cleanup.yaml
+++ b/.github/workflows/cleanup.yaml
@@ -1,9 +1,9 @@
 name: Terraform Import Workflow
 
-on:
-   push:
-    branches:
-      - kk_assignment
+# on:
+#    push:
+#     branches:
+#       - kk_assignment
 
 jobs:
   terraform-import:
