--- a/.github/workflows/provision-eks.yaml
+++ b/.github/workflows/provision-eks.yaml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Initialize Terraform
       working-directory: ./apps/nft-bridge/terraform
-      run: terraform init
+      run: terraform init -reconfigure
 
     - name: Validate Terraform
       working-directory: ./apps/nft-bridge/terraform
