--- a/.github/workflows/provision-eks.yaml
+++ b/.github/workflows/provision-eks.yaml
@@ -38,5 +38,6 @@ jobs:
       run: terraform plan
 
     - name: Apply Terraform
+      if: sucess()
       working-directory: ./apps/nft-bridge/terraform
       run: terraform apply -auto-approve
