--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,9 +1,9 @@
 name: NFT Bridge CI/CD Pipeline
 
 on:
-  # push:
-  #   branches:
-  #     - kk_assignment
+  push:
+    branches:
+      - kk_assignment
   pull_request:
 
 jobs:
@@ -46,13 +46,7 @@ jobs:
     - name: Build Docker Image
       run: |
            docker build -f apps/nft-bridge/Dockerfile -t nft-bridge:latest .
-        #docker image ls
-
-     # Run Docker Container
-    # - name: Run Docker Container
-    #   run: |
-    #        docker run -d --name nft-bridge-container -p 3000:3000 nft-bridge-1:latest
-
+      
     - name: Authenticate Docker to AWS ECR
       env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
